/*
 * $Id: ChangeLog,v 1.650 2003/01/27 12:31:34 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2003-01-27 22:30 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/thread.h
  * source/vm/thread.c
    ! Mutex condition-and-wait has moved from macro to function on linux.
    ! Detaching threads just before terminatio on linux to avoid memory leaks
    + Added notification object stack (this resolves the subscribe/notify
      problem when having multiple notify before one thread subscribes).

  * tests/Makefile
    ! Better usage of HB_MT flag

  * tests/inetto.prg
  * tests/mtgc.prg
    * Work in progress and tests

2003-01-27 10:35 UTC-0200 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
    * Added support for linking the correct HVMxxx.obj

2003-01-26 21:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/color53.prg
    + Added missing declaration for variable cToken

  * source/rtl/persist.prg
    + Added missing #include common.ch

2003-01-27 01:45 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * makefile.bc
  * makefile.vc
  * hrbdll.bc
  * hrbdll.vc
    + Add arrayblk.prg, color53.prg, mssgline.prg

2003-01-27 01:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/vm/hvm.c
    + Add support for cancel with Ctrl-Break
    + Add support to call to debug in an infinite or very big loop.

2003-01-27 01:27 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/Makefile
    + Add arrayblk.prg, color53.prg, mssgline.prg

2003-01-27 01:25 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * include/hblang.ch
    + Add constant from hbapilng.h

2003-01-27 01:20 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/inkey.c
  * include/hbapigt.h
    + Support for KEYBOARD command independent of SET TYPEAHEAD